--- a/Makefile.incl
+++ b/Makefile.incl
@@ -51,12 +51,6 @@
 # 	NSF-ITR grant OCE-0205590
 # ========== end copyright notice ==============
 
-# Test for Cygwin
-BUILD_OS = $(shell uname -s)
-ifeq ($(findstring CYGWIN, $(BUILD_OS)),CYGWIN)
-  BUILD_OS_CYGWIN = 1
-endif
-
 ifndef XERCESCROOT
   $(error "Error:  environment variable XERCESCROOT not defined!")
 endif
@@ -93,16 +87,19 @@ export IPATH= \
 
 CC=
 ifndef PLATFORM
-include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.i686-Linux
+include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.x86-Linux
 endif 
 ifeq ($(PLATFORM),i686-Cygwin)
-include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.i686-Linux
-endif
-ifeq ($(PLATFORM),i686-Linux)
-include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.$(PLATFORM)
+include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.x86-Linux
 endif
 ifeq ($(PLATFORM),x86-Linux)
-include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.i686-Linux
+include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.$(PLATFORM)
+endif
+ifeq ($(PLATFORM),x86_64-Linux)
+include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.x86-Linux
+endif
+ifeq ($(PLATFORM),i686-Linux)
+include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.x86-Linux
 endif
 ifeq ($(PLATFORM),sparc-SunOS)
 include $(XAIFBOOSTERROOT)/$(ROOTDIR)/Makefile.incl.$(PLATFORM)
